--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 
 .App {
   text-align: center;
 }
 .headerText {
   font-size: 70px;
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   font-weight: normal;
   margin: 0;
   letter-spacing: 3px;
-
 }
-
-
-
+.cardWrapper {
+  width: 800px;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+@media (max-width: 820px) {
+  .cardWrapper{
+    width: 354px;
+  }
+}
+@media (max-width: 370px) {
+  .cardWrapper{
+    width: 354px;
+  }
+  body {
+    width: 170%;
+    margin: 0;
+  }
+}
