--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -2,6 +2,7 @@
   width: 350px;
   height: 300px;
   border: 2px solid black;
+  margin-bottom: 50px;
 }
 .img {
   width: 350px;
@@ -13,7 +14,6 @@
 .removeBtn {
   width: 150px;
   height: 40px;
-  /* padding-top: 2px; */
 }
 .btnGroup {
   display: flex;
