--- a/src/components/AddPhoto.module.css
+++ b/src/components/AddPhoto.module.css
@@ -1,7 +1,33 @@
 .headerText {
-    font-size: 70px;
-    font-family: "Pacifico", cursive;
-    font-weight: normal;
-    margin: 0;
-    letter-spacing: 3px;
-  }
+  font-size: 70px;
+  font-family: "Pacifico", cursive;
+  font-weight: normal;
+  margin: 0;
+  letter-spacing: 3px;
+}
+
+.formGroup {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.formGroup input {
+  display: block;
+  background-color: #f4f3f4;
+  margin-bottom: 10px;
+  border: none;
+  padding: 15px;
+  width: 100%;
+}
+
+input:active,
+input:focus {
+  border: none;
+  outline: none;
+}
+.addPostBtn {
+  width: 330px;
+  height: 45px;
+  background-color: #005287;
+  color: white;
+}
